web-application/dashboard/dsl_dashboard/dsl/dsl_source_files/dsl.g4
grammar dsl;

import dslLexerGrammar;

twitbot: stat SEMICOLON (stat SEMICOLON )* ;

stat: action parameter (COMMA parameter)* ;

action: Action ;

parameter: identifier COLON value ;

identifier : Identifier ;

value : StringLiteral ;
